= Changelog

== 0.2.2 (not yet released)
* BUG: Relation end date was not set correctly in MBXML.
* NEW: Allow release type constants to be passed to include and filter objects.
* NEW: Methods Utils.add_namespace and Utils.remove_namespace.

== 0.2.1 (2007-07-24)
* Erroneous date strings in the XML are ignored. No error is raised and nil
  is set for the date.
* MBXML#get_entity_list now returns an ScoredCollection even if no list-element
  is present in the XML. This is due to the fact that musicbrainz.org always
  returns an empty result <metadata/> if no matching entities were found.
* Removed custom eql? and include? methods from Range and added them to
  IncompleteDate. Those methods changed the behaviour of Range which might lead
  to unexcpected results in programs using RBrainz.
* Changed IncompleteDate to include its end value.
* Added additional examples

== 0.2.0 (2007-07-19)
* Querying of collections implemented
* Collection class to store search results (with support for search score and offset)
* User authentication
* Querying of user information
* Support POST in Webservice class to submit information.
* PUID submission.
* Made IncompleteDate behave like a range with corresponding equality operations
* Restructured MBID to use a ducktyping approach
* Introduced Individual as superclass for Artist and Label
* Added unique_name method for Artist and Label
* Label: Renamed founding_date and dissolving_date to begin_date
  and end_date (to be more consistent with Artist)
* Support for label aliases
* Added label type "Unknown"
* Full text search (lucene search queries).
* Support entity tags as defined in the MB metadata scheme 1.2. Currently only
  available on test.musicbrainz.org.
* New Model::DefaultFactory

== 0.1.1 (2007-05-29)
* Full support for relations
* Proper exception handling in Webservice class
* Minor corrections

== 0.1.0 (2007-05-23)
* Initial release

$Id$